# Aleph-mcp

./: .gitignore  LICENSE  README.md
.github/workflows/: ci-siliconflow.yml  ci-t8star.yml  ci.yml  publish-siliconflow.yml  publish-t8star.yml  publish.yml
docs/superpowers/plans/: 2026-06-23-siliconflow-mcp-ts-rewrite.md
docs/superpowers/specs/: 2026-06-23-siliconflow-mcp-ts-rewrite-design.md
siliconflow/: .env.example  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
siliconflow/src/: audio.ts  client.ts  images.ts  index.ts  ratios.ts  tool-def.ts  user.ts  videos.ts
siliconflow/src/aleph_siliconflow_mcp/: __init__.py  audio.py  client.py  images.py  main.py  ratios.py  server.py  user.py  videos.py
siliconflow/tests/: audio.test.ts  client.test.ts  images.test.ts  ratios.test.ts  registration.test.ts  render.test.ts  test_audio.py  test_client.py  test_images.py  test_ratios.py  test_server.py  test_user.py  test_videos.py  user.test.ts  videos.test.ts
t8star/: .env.example  README.md  package-lock.json  package.json  tsconfig.json
t8star/src/: audio.ts  client.ts  images.ts  index.ts  models.ts  server.ts
t8star/test/: audio.test.ts  client.test.ts  images.test.ts  models.test.ts  server.test.ts
