[project]
name = "aleph-siliconflow-mcp"
version = "0.1.0"
description = "Aleph's official SiliconFlow media-generation MCP server (image / video / TTS)"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["mcp", "siliconflow", "image", "video", "tts", "aleph"]
dependencies = [
    "httpx>=0.28.1",
    "mcp>=1.27.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
aleph-siliconflow-mcp = "aleph_siliconflow_mcp.main:main"

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aleph_siliconflow_mcp"]
